<resources>
    <string name="app_name">Moon Wash</string>
    <string name="next">Lanjut</string>
    <string name="sweeto">Sweeto</string>
    <string name="default_web_client_id">Your WEB API KEY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pilih_lokasi_anda">Pilih Lokasi Anda</string>
    <string name="pilih_lokasi">Pilih Lokasi</string>
    <string name="nama">Nama</string>
    <string name="dekripsi">Dekripsi</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad</string>
    <string name="estimasi">Estimasi</string>
    <string name="_1st_ite">1st Ite</string>
    <string name="tambahkan_keranjang">Tambahkan Keranjang</string>
    <string name="moon_wash">Moon Wash</string>
    <string name="design_by_n_fremasadi">Design By \n MoonWash</string>
    <string name="pelayanan_cuci_sepatu">Pelayanan Cuci Sepatu</string>
    <string name="login_account">Login Account</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="continue_with">Continue With</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don’t Have Account?</string>
    <string name="alamat">Alamat</string>
    <string name="payment">Payment</string>
    <string name="total">Total</string>
    <string name="order">Order</string>
    <string name="baru_dibeli">Baru DiPesan</string>
    <string name="pesan_pelayanan_cuci_sepatu">Pesan Pelayanan Cuci Sepatu</string>
    <string name="sign_up_with">Sign Up With</string>
    <string name="create_account">Buat Akun</string>
    <string name="already_have_an_account">Sudah Punya Akun?</string>
    <string name="beli_lagi">Pesan Lagi</string>
    <string name="go_home">Kembali Home</string>
    <string name="terimakasih_n_pesanan_anda_diproses">Terimakasih \n Pesanan Anda Diproses</string>
    <string name="diproses">Diproses</string>
    <string name="cart">Keranjang</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="total_harga">Total Harga</string>
    <string name="diterima_oleh_admin">Diterima Oleh Admin</string>
    <string name="kurir_otw_dirumah_kamu">Kurir akan menjemput sepatu</string>
    <string name="selesai">Selesai</string>
    <string name="email">Email</string>
    <string name="atau">atau</string>
    <string name="no_hp">No Hp</string>
    <string name="pesan">Pesan</string>
    <string name="nikmati_pelayanan_cuci_sepatu_berkualitas_n_dan_tunggu_di_rumah">Nikmati Pelayanan Cuci Sepatu Berkualitas\n dan tunggu di Rumah</string>
    <string name="popular">Popular</string>
    <string name="lihat_menu">Lihat\nLayanan</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="simpan">Simpan</string>
    <string name="logout">Logout</string>
    <string name="tambah_pesanan">Tambah Pesanan</string>
    <string name="jumlah">Jumlah</string>
    <string name="cari">Cari</string>
    <string name="keranjang">Keranjang</string>
    <string name="home">Home</string>
    <string name="riwayat">Riwayat</string>
    <string name="profile">Profile</string>
    <string name="image_description">Image Description</string>
    <string name="history_pemesanan">History Pemesanan</string>
    <string name="kurir_akan_mengantar_sepatu">Kurir akan mengantar sepatu</string>
</resources>