<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrackHistoryActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_left" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato_regular"
        android:text="Status Pesanan"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- First status: Received by Admin -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/receivedLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20">

        <androidx.cardview.widget.CardView
            android:id="@+id/orderStatusReceived"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="#B7BAB7"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toStartOf="@+id/statusTextReceived"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/statusTextReceived"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/diterima_oleh_admin"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/orderStatusReceived"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Second status: Picked Up by Courier -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pickedUpLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receivedLayout">

        <androidx.cardview.widget.CardView
            android:id="@+id/orderStatusPickedUp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="#B7BAB7"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toStartOf="@+id/statusTextPickedUp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/statusTextPickedUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/kurir_otw_dirumah_kamu"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/orderStatusPickedUp"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Third status: In Progress -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inProgressLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pickedUpLayout">

        <androidx.cardview.widget.CardView
            android:id="@+id/orderStatusInProgress"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="#B7BAB7"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toStartOf="@+id/statusTextInProgress"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/statusTextInProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Sepatu Sedang diKerjakan"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/orderStatusInProgress"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Fourth status: Completed -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/completedLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inProgressLayout">

        <androidx.cardview.widget.CardView
            android:id="@+id/orderStatusCompleted"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="#B7BAB7"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toStartOf="@+id/statusTextCompleted"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/statusTextCompleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/kurir_akan_mengantar_sepatu"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/orderStatusCompleted"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
